--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@types/node": "^24.3.0",
+    "framer-motion": "^12.23.12",
     "jsrsasign": "^11.1.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
